Serve registry payloads from non-dot paths

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "biome check . --write",
     "format": "biome format . --write",
     "format:check": "biome format .",
-    "mcp:build": "bun build scripts/merge-mcp.ts --outfile registry/nextjs-mcp/opencode/.opencode/bin/merge-mcp.mjs --format=esm --target=node",
+    "mcp:build": "bun build scripts/merge-mcp.ts --outfile registry/nextjs-mcp/opencode/files/bin/merge-mcp.mjs --format=esm --target=node",
     "registry:build": "bun run mcp:build && bun run --bun scripts/build-registry.ts",
     "registry:validate": "bun run --bun scripts/validate-registry.ts"
   },
