--- a/site/package.json
+++ b/site/package.json
@@ -21,6 +21,10 @@
     "next": "16.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-tweet": "^3.3.0",
+    "@next/mdx": "^16.1.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "html-react-parser": "^5.1.18",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
@@ -34,6 +38,7 @@
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
     "baseline-browser-mapping": "^2.9.12",
     "postcss": "^8.4.47",
